--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body id="homePage">
 
 	<h1>Interior Design Styles</h1>
-	<p>Are you constantly bored with a repetitive life? Maybe you should consider a change of scenery. One way to do that is a bit of redecorating. Here are a couple options for different styles of interior design. </p>
+	<p>Are you constantly bored with a repetitive life? Maybe you should consider a change of scenery. One way to do that is simply a bit of redecorating. Here are a couple options for different styles of interior design. </p>
 	<ol>
 		<li><a href = "scandinavian.html">Scandinavian</a></li>
 		<li><a href = "industrial.html">Industrial</a></li>
